# Spiderverse

./: .gitignore  LICENSE  README.md
Diagrams/: Architecturedrawio.drawio  better.mov  robot.drawio  robotic-system (1).drawio  robotic-system.drawio  ros-network (1).drawio  ros-network.drawio
lidar_ws/: build.sh  import socket.py  lidar_and_rviz.sh  save_map.sh
lidar_ws/install/: local_setup.sh  setup.sh
lidar_ws/log/: latest_build
maps/: map_20250326_213900.pbstream  map_20250326_213900.pgm  map_20250326_213900.yaml  map_20250326_214236.pbstream  map_20250326_214236.pgm  map_20250326_214236.yaml  map_20250326_214925.yaml  map_20250326_215137.pbstream  map_20250326_215137.pgm  map_20250326_215137.yaml
ros2_ws/: installation.md
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build
ros2_ws/src/lidar_udp_receiver/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/lidar_udp_receiver/launch/: lidar_udp_viz.launch.py
ros2_ws/src/lidar_udp_receiver/rviz/: lidar_config.rviz
ros2_ws/src/lidar_udp_receiver/src/: lidar_udp_receiver_node.cpp
src/: .gitignore
src/camera/: GUIDE.md  README.md  demo-gstream.py  hello-world  history.txt  main-receiver.py  test-zeromq-reciever.py  usb_test.py
src/hexapod/: asdf.py  hexapod.py  hexapod_configs.py  leg.py  leg_configs.py  main.py  readme.md  readme.txt.txt  reset_servos.py  rotation_test.py  servo.py  servo_revision.py  test.py  test5.py  translation animation_in_out.py  translation w angle offset.py
src/imu/: bn0o55.py  lsm9ds1.py
src/lidar_node/: main.cpp
src/pi-setup/: Instructions.md  (+1 more)
(+160 files in other folders)
